Fix button spacing

--- a/js_calculator.css
+++ b/js_calculator.css
@@ -10,7 +10,7 @@
 }
 #container {
     position: relative;
-    height: 53vh;
+    height: 49vh;
     width: 33vh;
     margin-left: auto; 
     margin-right: auto;
@@ -24,11 +24,12 @@
 #calc {
     position: relative;
     margin: auto;
-    height: 50vh;;
+    height: 46vh;;
     width: 30vh;
     background-color: black;
     display: flex;
     flex-flow: column;
+    font-family: "Lucida Console", Monaco, monospace;
 }
 .display {
     position: relative;
@@ -40,20 +41,20 @@
     display: inline-block;
     text-align: right;
     color: white;
-    font-family: "Lucida Console", Monaco, monospace;
     font-size: 3.5em;
 }
 .row {
     position: relative;
-    margin: 1vh .25vh .25vh 1.5vh;
-    height: 100%;
+    margin-top: 1vh;
+    margin-left: 1.5vh;
     width: 100%;
     display: inline-block;
     flex-flow: column;
 }
 .btn {
     padding: 3% 5.5%;
-    margin: 0vh .5vh;
+    margin-right: .25vh;
+    margin-left: .25vh;
     text-align: center;
     font-family: "Lucida Console", Monaco, monospace;
     font-size: 1.75em;
